Updated : Coded for Better Method Selection In Run Time